Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13989

"%{Qt:Version}" is resolved in qconfig.xml when overriding auto-detected versions

XMLWordPrintable

    • 5ab7500b64d1983c7eb783eb4fdb1796671be8c4

      Sometimes Qt versions registered by the SDK are copied into QtProject/qtcreator/qtversion.xml with resolved names. This seems to happen when different Qt Versions with the same autodetectionSource exist.

      How to reproduce

      Install two different Qt SDK's with the same Qt version
      Start Qt Creator from one, close it
      -> qtversion.xml contains auto detected Qt Version with unresolved "Name"
      Start Qt Creator from second, close it
      -> qtversion.xml contains auto detected Qt Version with resolved "Name"

        For Gerrit Dashboard: QTCREATORBUG-13989
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes