Do not expand display name when updating auto-detected Qt versions

Task-number: QTCREATORBUG-13989
Change-Id: Id1e3d756f732b41e544f08ef74432002b7b8dc9f
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>